Add User Experience improvements: Wishlist, Product Filters, Related Products

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,11 @@
                 <ul class="navbar-nav">
                     {% if current_user.is_authenticated %}
                         <li class="nav-item">
+                            <a class="nav-link" href="{{ url_for('wishlist') }}" title="Wishlist">
+                                <i class="bi bi-heart"></i>
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link position-relative" href="{{ url_for('view_cart') }}">
                                 <i class="bi bi-cart3"></i>
                                 <span class="badge bg-danger position-absolute top-0 start-100 translate-middle">
